--- a/output/john_doe_resume.html
+++ b/output/john_doe_resume.html
@@ -12,7 +12,7 @@
 <li><strong>Phone</strong>: 555-1234</li>
 </ul>
 <h2>Summary</h2>
-<p>A highly skilled software engineer with 5+ years of experience in developing scalable web applications and leading cross-functional teams. Passionate about solving challenging problems using modern technologies.</p>
+<p>Experienced software engineer with a proven track record of developing scalable web applications and leading cross-functional teams over 5+ years. Skilled in leveraging modern technologies to solve complex problems and drive innovation. A results-driven professional dedicated to delivering high-quality solutions in the fast-paced tech industry.</p>
 <h2>Experience</h2>
 <h3>Software Engineer at Tech Corp</h3>
 <ul>
@@ -22,13 +22,19 @@
 <p><strong>Responsibilities</strong>:</p>
 </li>
 <li>
-<p>Led a team of 5 engineers to build a customer-facing web application.</p>
+<ul>
+<li>Led a team of 5 engineers to successfully develop a customer-facing web application.</li>
+</ul>
 </li>
 <li>
-<p>Collaborated with design and product teams to implement new features.</p>
+<ul>
+<li>Collaborated with design and product teams to implement new features, enhancing user experience.</li>
+</ul>
 </li>
 <li>
-<p>Optimized backend APIs to reduce response times by 30%.</p>
+<ul>
+<li>Optimized backend APIs, resulting in a 30% reduction in response times, improving overall system performance.</li>
+</ul>
 </li>
 </ul>
 <h3>Junior Developer at Webworks</h3>
@@ -39,10 +45,19 @@
 <p><strong>Responsibilities</strong>:</p>
 </li>
 <li>
-<p>Developed internal tools to automate manual processes.</p>
+<ul>
+<li>Developed internal tools for process automation</li>
+</ul>
 </li>
 <li>
-<p>Wrote unit tests and maintained code quality across projects.</p>
+<ul>
+<li>Implemented unit tests to ensure code quality</li>
+</ul>
+</li>
+<li>
+<ul>
+<li>Maintained code quality standards for projects</li>
+</ul>
 </li>
 </ul>
 <h2>Skills</h2>
@@ -59,12 +74,12 @@
 <h3>Personal Finance App</h3>
 <ul>
 <li><strong>Technologies Used</strong>: React, Node.js, MongoDB</li>
-<li><strong>Description</strong>: A personal finance tracker that helps users manage expenses and set savings goals.</li>
+<li><strong>Description</strong>: Developed and implemented a user-friendly personal finance tracker application to empower individuals in managing expenses and achieving savings goals effectively. Utilized technologies such as React for front-end development and Node.js for back-end functionality. Designed intuitive user interfaces to enhance user experience and drive engagement. Integrated features for expense tracking, budget setting, and goal monitoring, resulting in improved financial awareness and planning for users.</li>
 </ul>
 <h3>Blog Platform</h3>
 <ul>
 <li><strong>Technologies Used</strong>: Django, PostgreSQL, AWS</li>
-<li><strong>Description</strong>: A blog platform allowing users to create, edit, and share posts securely.</li>
+<li><strong>Description</strong>: Developed and implemented a secure blog platform enabling users to create, edit, and share posts. Utilized technologies such as HTML, CSS, JavaScript for frontend development, and Node.js with Express for backend. Integrated authentication and authorization features to ensure data security. Collaborated with team members to design and implement user-friendly interfaces. Demonstrated proficiency in full-stack development, emphasizing user experience and data protection.</li>
 </ul>
                 </body>
             </html>
